--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,7 +21,7 @@ jobs:
           go-version: '1.23.3'
         
       - name: install dep
-        run: go mod downloads
+        run: go mod download
 
       - name: build
         run: go build -v ./...
